# gossip

./: .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  _test_build.py  api.html  arguments.html  doc_requirements.txt  error_handling.html  genindex.html  getting_started.html  hook_groups.html  hooks.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/workflows/: test.yml
_sources/: error_handling.txt  getting_started.txt
capnhook/: exceptions.py
doc/: advanced.rst  api.rst  arguments.rst  basics.rst  changelog.rst  conf.py  error_handling.rst  getting_started.rst  hook_dependencies.rst  hook_groups.rst  hooks.rst  index.rst  sphinx_ext.rst
gossip/: __init__.py  _compat.py  blueprint.py  exception_policy.py  exceptions.py  group.py  groups.py  helpers.py  hook.py  hooks.py  registration.py  registry.py  utils.py
gossip/contrib/: sphinx_ext.py
hooky/: registration.py
tests/: __init__.py  conftest.py  test__captainhook.py  test_argument_validation.py  test_blueprints.py  test_builtin_hooks.py  test_capnhook.py  test_dependencies.py  test_deprecation.py  test_doctests.py  test_exception_handling.py  test_exception_policies.py  test_gossip.py  test_hook.py  test_hook_reentrency.py  test_hooky.py  test_needs_provides.py  test_readme_doctest.py  test_registry.py  test_strict_groups.py  test_tag_scenarios.py  test_tags.py  test_toggle_hooks.py  test_tokens.py  test_topological_sort.py  test_weights.py  utils.py
