[build-system]
requires = ["hatchling>=0.25.1", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gossip"
description = "Signaling and hooking library"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "BSD 3-Clause License" }

classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["logbook>=0.12.0", "sentinels", "vintage"]
dynamic = ["version"]

authors = [{ name = "Rotem Yaari", email = "vmalloc@gmail.com" }]

[project.urls]
"Homepage" = "https://github.com/getslash/gossip"

[project.optional-dependencies]
testing = ["pylint", "pytest", "munch"]
doc = ["docutils", "Sphinx>=1.7.1", "alabaster", "releases"]

[tool.hatch.version]
source = "vcs"
