[metadata]
name = gossip
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
description = Signaling and hooking library
license = BSD3
author = Rotem Yaari
author_email = vmalloc@gmail.com
url = http://github.com/getslash/gossip


[extras]
testing =
    pylint
    pytest
    munch

[tool:pytest]
testpaths = tests
