[metadata]
name = gossip
classifiers =
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
description = Signaling and hooking library
license = BSD3
author = Rotem Yaari
author_email = vmalloc@gmail.com
url = http://github.com/getslash/gossip


[extras]
testing =
    pylint
    pytest
    munch
doc =
    docutils
    Sphinx
    alabaster
    releases

[tool:pytest]
testpaths = tests
